Prevent collapse of an open question

--- a/Resources/Maquettes/scss/partials/_panels.scss
+++ b/Resources/Maquettes/scss/partials/_panels.scss
@@ -31,6 +31,11 @@
   margin-top: 0;
 }
 
+.panel-group .panel-heading[aria-expanded=true]
+{
+  pointer-events: none;
+}
+
 //Since it's mandatory to use panel to accordion in Bootstrap, I transform the panel-default to a base color panel, so the user don't see any box
 //Maybe use transparency indeed ?
 .panel-default>.panel-heading
